--- a/index.html
+++ b/index.html
@@ -7,57 +7,22 @@
   <title>HYOU</title>
   <link rel="stylesheet" href="stylesheet.css">
   <script type="text/javascript" src="display.js"></script>
-
+  <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
 </head>
 <body>
-  <header id="header">
-    <textarea id="output"></textarea>
+  <!--
+  <header id="menu">
+    <h1>TEXT!!!!!</h1>
   </header>
+  -->
+  <div id="header_bar">
+    <i id="menubutton_open" class="fas fa-bars fa-fw"></i><textarea id="display_area"></textarea>
+  </div>
   <div id="maincontainer">
-    <p>
-      <img src="jackets/z.jpg" class="images" alt="black">
-      <img src="jackets/z.jpg" class="images" alt="FLOOR INFECTION Medley&#13;&#10;from SOUND VOLTEX×jubeat">
-      <img src="jackets/z.jpg" class="images test0" alt="超☆超☆光☆速☆出☆前☆最☆速!!!&#13;&#10;スピード★スター★かなで">
-      <img src="jackets/z.jpg" class="images test1" alt="RPG／アニメ「映画クレヨンしんちゃん&#13;&#10;バカうまっ！B級グルメサバイバル！！」より">
-      <img src="jackets/z.jpg" class="images test2" alt="KAC 2013 ULTIMATE MEDLEY&#13;&#10;-HISTORIA SOUND VOLTEX- Empress Side">
-    </p>
-    <p>
-      <img src="jackets/z.jpg"><img src="jackets/zz.jpg"><img src="jackets/z.jpg"><img src="jackets/zz.jpg"><img src="jackets/z.jpg"><img src="jackets/zz.jpg">
-    </p>
-    <div>
-      <img src="jackets/z.jpg"><img src="jackets/zz.jpg"><img src="jackets/z.jpg"><img src="jackets/zz.jpg"><img src="jackets/z.jpg"><img src="jackets/zz.jpg">
-    </div>
-    <div>
-      <img src="jackets/z.jpg"><img src="jackets/zz.jpg"><img src="jackets/z.jpg"><img src="jackets/zz.jpg"><img src="jackets/z.jpg"><img src="jackets/zz.jpg">
-    </div>
-    <div>
-      <img src="jackets/z.jpg"><img src="jackets/zz.jpg"><img src="jackets/z.jpg"><img src="jackets/zz.jpg"><img src="jackets/z.jpg"><img src="jackets/zz.jpg">
-    </div>
-    <div>
-      <img src="jackets/z.jpg"><img src="jackets/zz.jpg"><img src="jackets/z.jpg"><img src="jackets/zz.jpg"><img src="jackets/z.jpg"><img src="jackets/zz.jpg">
-    </div>
-    <div>
-      <img src="jackets/z.jpg"><img src="jackets/zz.jpg"><img src="jackets/z.jpg"><img src="jackets/zz.jpg"><img src="jackets/z.jpg"><img src="jackets/zz.jpg">
-    </div>
-    <div>
-      <img src="jackets/z.jpg"><img src="jackets/zz.jpg"><img src="jackets/z.jpg"><img src="jackets/zz.jpg"><img src="jackets/z.jpg"><img src="jackets/zz.jpg">
-    </div>
-    <div>
-      <img src="jackets/z.jpg"><img src="jackets/zz.jpg"><img src="jackets/z.jpg"><img src="jackets/zz.jpg"><img src="jackets/z.jpg"><img src="jackets/zz.jpg">
-    </div>
-    <div>
-      <img src="jackets/z.jpg"><img src="jackets/zz.jpg"><img src="jackets/z.jpg"><img src="jackets/zz.jpg"><img src="jackets/z.jpg"><img src="jackets/zz.jpg">
-    </div>
-    <div>
-      <img src="jackets/z.jpg"><img src="jackets/zz.jpg"><img src="jackets/z.jpg"><img src="jackets/zz.jpg"><img src="jackets/z.jpg"><img src="jackets/zz.jpg">
-    </div>
-    <div>
-      <img src="jackets/a.jpg"><img src="jackets/a.jpg"><img src="jackets/a.jpg"><img src="jackets/a.jpg"><img src="jackets/a.jpg"><img src="jackets/a.jpg"><img src="jackets/a.jpg"><img src="jackets/a.jpg"><img src="jackets/a.jpg"><img src="jackets/a.jpg">
-    </div>
-    <div>
-      <img src="jackets/aa.jpg"><img src="jackets/aa.jpg"><img src="jackets/aa.jpg"><img src="jackets/aa.jpg"><img src="jackets/aa.jpg"><img src="jackets/aa.jpg"><img src="jackets/aa.jpg"><img src="jackets/aa.jpg">
-    </div>
+    
   </div>
   <script type="text/javascript" src="script.js"></script>
+  <script type="text/javascript" src="search.js"></script>
+  <script type="text/javascript" src="menu.js"></script>
 </body>
 </html>
