--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </header>
   -->
   <div id="header_bar">
-    <i id="menubutton_open" class="fas fa-bars fa-fw"></i><textarea id="display_area"></textarea>
+    <i id="menubutton_open" class="fas fa-bars fa-fw"></i><textarea id="display_area">18PUC難易度表 from @PUC_level</textarea>
   </div>
   <div id="maincontainer">
     
