--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&display=swap" rel="stylesheet">
   
   <script type="text/javascript" src="display.js"></script>
+  <script type="text/javascript" src="inflate.js"></script>
+  <script type="text/javascript" src="deflate.js"></script>
   
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
 </head>
