--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </header>
   -->
   <div id="header_bar">
-    <i id="menubutton_open" class="fas fa-bars fa-fw"></i><textarea id="display_area">18PUC難易度表 from @PUC_level&#13;&#10;[頭文字]/[曲名](予定)</textarea>
+    <i id="menubutton_open" class="fas fa-bars fa-fw"></i><textarea id="display_area">18PUC難易度表 from @PUC_level&#13;&#10;[頭文字]/[曲名](予定)/更新:21/09/02</textarea>
   </div>
   <div id="maincontainer">
     
