--- a/index.html
+++ b/index.html
@@ -26,10 +26,9 @@
     <i id="menubutton_open" class="fas fa-bars fa-fw"></i><textarea id="display_area">18PUC難易度表 from @PUC_level&#13;&#10;[頭文字]/[曲名](予定)/更新:21/09/02</textarea>
   </div>
   <div id="maincontainer">
-    
+    <textarea id="search_place" placeholder="曲名絞り込み検索"></textarea>
   </div>
   <script type="text/javascript" src="script.js"></script>
-  <script type="text/javascript" src="search.js"></script>
   <script type="text/javascript" src="menu.js"></script>
 </body>
 </html>
