--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
   <div id="header_bar">
     <i id="menubutton_open" class="fas fa-bars fa-fw"></i><textarea id="display_area">18PUC難易度表 from @PUC_level&#13;&#10;[頭文字]/[曲名](予定)/更新:21/09/02</textarea>
   </div>
-  <div id="maincontainer">
+  <div>
     <textarea id="search_place" placeholder="曲名絞り込み検索"></textarea>
+  </div>
+  <div id="maincontainer">
   </div>
   <script type="text/javascript" src="script.js"></script>
   <script type="text/javascript" src="menu.js"></script>
